--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
     "express": "^4.21.1",
     "fs": "^0.0.1-security",
     "node-fetch": "^3.3.2",
-    "youtube-dl-exec": "^3.0.10",
-    "yt-dlp": "^2024.10.22"
+    "youtube-dl-exec": "^3.0.10"
   },
   "scripts": {
     "build": "./render-build.sh"
